<resources>
    <string name="app_name">SofascoreAndroidAcademy</string>
    <string name="leagues">Leagues</string>
    <string name="view_tournament_details">View Tournament Details</string>
    <string name="no_results_yet">No results yet.</string>
    <string name="total_players">Total Players</string>
    <string name="next_match">Next Match</string>
    <string name="football">Football</string>
    <string name="separator">-</string>
    <string name="_1">1</string>
    <string name="incident">incident</string>
    <string name="back_button">back button</string>
    <string name="league_logo">League logo</string>
    <string name="hashtag">#</string>
    <string name="team">Team</string>
    <string name="ć">P</string>
    <string name="w">W</string>
    <string name="d">D</string>
    <string name="l">L</string>
    <string name="goals">Goals</string>
    <string name="pts">PTS</string>
    <string name="pct">PCT</string>
    <string name="diff">Diff</string>
    <string name="str">Str</string>
    <string name="gb">GB</string>
    <string name="settings">Settings</string>
    <string name="sat">SAT</string>
    <string name="_10_12">10.12.</string>
    <string name="home_team_logo">home team logo</string>
    <string name="away_team_logo">away team logo</string>
    <string name="nationality">Nationality</string>
    <string name="position">Position</string>
    <string name="matches">Matches</string>
    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="date_format">Date Format</string>
    <string name="dd_mm_yyyy">DD / MM / YYYY</string>
    <string name="mm_dd_yyyy">MM / DD / YYYY</string>
    <string name="about">About</string>
    <string name="sofascore_android_academy">Sofascore Android Academy</string>
    <string name="class_2024">Class 2024</string>
    <string name="tw_app_name">App Name</string>
    <string name="mini_sofascore_app">Mini Sofascore App</string>
    <string name="api_credit">API Credit</string>
    <string name="sofascore">Sofascore</string>
    <string name="developer">Developer</string>
    <string name="marin_kvesi">Marin Kvesić</string>
    <string name="venue">Venue</string>
    <string name="stadium">Stadium</string>
    <string name="tournaments">Tournaments</string>
    <string name="foreign_players">Foreign Players</string>
    <string name="team_info">Team Info</string>
    <string name="no_events_today">No events today.</string>
</resources>