<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <TextView
        android:id="@+id/positionStandingsLabel"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:gravity="center"
        android:text="@string/hashtag"
        android:textSize="14sp"
        android:textColor="@color/on_surface_on_surface_lv_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/teamNameLabel"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <TextView
        android:id="@+id/teamNameLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/team"
        android:layout_marginStart="12dp"
        android:textSize="14sp"
        android:textColor="@color/on_surface_on_surface_lv_2"
        app:layout_constraintStart_toEndOf="@id/positionStandingsLabel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/playedLabel"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintHorizontal_chainStyle="spread"/>

    <TextView
        android:id="@+id/playedLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ć"
        android:textSize="14sp"
        android:textColor="@color/on_surface_on_surface_lv_2"
        app:layout_constraintStart_toEndOf="@id/teamNameLabel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/wonLabel"
        app:layout_constraintHorizontal_weight="1"/>

    <TextView
        android:id="@+id/wonLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/w"
        android:textSize="14sp"
        android:textColor="@color/on_surface_on_surface_lv_2"
        app:layout_constraintStart_toEndOf="@id/playedLabel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/drawLabel"
        app:layout_constraintHorizontal_weight="1"/>

    <TextView
        android:id="@+id/drawLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/d"
        android:textSize="14sp"
        android:textColor="@color/on_surface_on_surface_lv_2"
        app:layout_constraintStart_toEndOf="@id/wonLabel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/lostLabel"
        app:layout_constraintHorizontal_weight="1"/>

    <TextView
        android:id="@+id/lostLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/l"
        android:textSize="14sp"
        android:textColor="@color/on_surface_on_surface_lv_2"
        app:layout_constraintStart_toEndOf="@id/drawLabel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/percentageLabel"
        app:layout_constraintHorizontal_weight="1"/>

    <TextView
        android:id="@+id/percentageLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/pct"
        android:textSize="14sp"
        android:textColor="@color/on_surface_on_surface_lv_2"
        app:layout_constraintStart_toEndOf="@id/lostLabel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"/>
</androidx.constraintlayout.widget.ConstraintLayout>
