<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:background="@color/surface_surface_1"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/incidentLogo"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/incident"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:src="@drawable/ic_football" />


    <View
        android:id="@+id/separator"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginVertical="8dp"
        app:layout_constraintStart_toEndOf="@id/incidentLogo"
        app:layout_constraintTop_toTopOf="@id/incidentLogo"
        android:background="@color/on_surface_on_surface_lv_4">
    </View>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/gameScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/separator"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            style="@style/Headline1"
            android:id="@+id/homeTeamScore"
            android:layout_width="32dp"
            android:layout_height="28dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/on_surface_on_surface_lv_1"
            android:gravity="end"
            tools:text="0"
            />

        <TextView
            style="@style/Headline1"
            android:id="@+id/scoreSeparator"
            android:layout_width="12dp"
            android:layout_height="28dp"
            app:layout_constraintStart_toEndOf="@id/homeTeamScore"
            app:layout_constraintTop_toTopOf="@id/homeTeamScore"
            app:layout_constraintBottom_toBottomOf="@id/homeTeamScore"
            android:gravity="center_horizontal"
            android:textColor="@color/on_surface_on_surface_lv_1"
            android:text="@string/separator"
            />

        <TextView
            style="@style/Headline1"
            android:id="@+id/awayTeamScore"
            android:layout_width="32dp"
            android:layout_height="28dp"
            app:layout_constraintStart_toEndOf="@id/scoreSeparator"
            app:layout_constraintTop_toTopOf="@id/homeTeamScore"
            app:layout_constraintBottom_toBottomOf="@id/homeTeamScore"
            android:textColor="@color/on_surface_on_surface_lv_1"
            android:text="@string/_1"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/minuteOfIncident"
        android:layout_width="24dp"
        android:layout_height="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/gameScore"
        android:gravity="center"
        tools:text="8'" />

    <View
        android:layout_width="24dp"
        android:layout_height="1dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintStart_toStartOf="@id/minuteOfIncident"
        app:layout_constraintEnd_toEndOf="@id/minuteOfIncident"
        app:layout_constraintBottom_toTopOf="@id/minuteOfIncident"
        android:background="@color/on_surface_on_surface_lv_4">
    </View>


</androidx.constraintlayout.widget.ConstraintLayout>