<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/surface_surface_0">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar_event_details"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/surface_surface_1" >


        <ImageView
            android:id="@+id/backButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/back_button"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_back_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginVertical="12dp"
            app:tint="@color/on_surface_on_surface_lv_1"
            />

        <ImageView
            android:id="@+id/leagueLogo"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginStart="24dp"
            android:contentDescription="@string/league_logo"
            android:background="@drawable/rounded_background"
            app:layout_constraintStart_toEndOf="@id/backButton"
            app:layout_constraintTop_toTopOf="@id/backButton"
            app:layout_constraintBottom_toBottomOf="@id/backButton"
            tools:src="@drawable/clubs_svgrepo_com"/>

        <TextView
            android:id="@+id/tw_match_details_tournament"
            style="@style/Micro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@id/leagueLogo"
            app:layout_constraintTop_toTopOf="@id/backButton"
            app:layout_constraintBottom_toBottomOf="@id/backButton"
            tools:text="Football, Spain, LaLiga, Round 15"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_event_details"
        android:background="@color/surface_surface_1" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/homeTeam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/surface_surface_1"
            android:layout_marginStart="16dp"
            android:paddingVertical="16dp"
            android:paddingBottom="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/homeTeamLogo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/home_team_logo"
                android:layout_marginHorizontal="28dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:src="@drawable/clubs_svgrepo_com"
                />

            <TextView
                style="@style/Assistive"
                android:id="@+id/homeTeamName"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/homeTeamLogo"
                android:textColor="@color/on_surface_on_surface_lv_1"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                tools:text="Manchester United"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/score_match_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/homeTeam"
            app:layout_constraintBottom_toBottomOf="@id/homeTeam"
            app:layout_constraintStart_toEndOf="@id/homeTeam"
            app:layout_constraintEnd_toStartOf="@id/awayTeam" >


        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/awayTeam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/surface_surface_1"
            android:layout_marginEnd="16dp"
            android:paddingVertical="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/homeTeam"
            app:layout_constraintBottom_toBottomOf="@id/homeTeam" >

            <ImageView
                android:id="@+id/awayTeamLogo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/away_team_logo"
                android:layout_marginHorizontal="28dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:src="@drawable/clubs_svgrepo_com"
                />

            <TextView
                style="@style/Assistive"
                android:id="@+id/awayTeamName"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/awayTeamLogo"
                android:textColor="@color/on_surface_on_surface_lv_1"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                tools:text="Barcelona"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/incidentRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <include
        android:id="@+id/upcoming_event_desc"
        layout="@layout/upcoming_event_description"
        android:visibility="gone"
        />


</androidx.constraintlayout.widget.ConstraintLayout>

